--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "10.0.0",
     "ejs": "^3.1.8",
     "express": "^4.17.1",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.20"
   }
 }
